# rules

./: README.md  pyproject.toml  setup.py  test_handlers.py  test_rules.py  test_watchlist.py
samples/: simple-handler.yaml  simple-rule.yaml  simple-rule2.yaml  simple-rule3.yaml  simple-rule4.yaml  watchlist-rule.yaml  watchlist-rule.yml  watchlist-rule2.yaml
yaml_rules/: __init__.py  actions.py  rules.py
